<resources>
    <string name="app_name">格雷斯存款机</string>
    <string name="select_serial_port">串口设备:</string>
    <string name="select_baud_rate">波特率</string>
    <string name="open_serial_port">打开串口</string>
    <string name="close_serial_port">关闭串口</string>
    <string name="no_serial_device">找不到串口设备</string>
    <string name="send_data1">打印机测试</string>
    <string name="send_data2">背面串口测试</string>
    <string name="send_data3">打开罩门</string>
    <string name="send_data4">关闭罩门</string>
    <string name="send_data5">打开落钞口</string>
    <string name="send_data6">关闭落钞口</string>
    <string name="send_data7">报警器测试</string>
    <string name="send_data8">读取机器版本</string>
    <string name="send_data9">电机测试</string>
    <string name="send_data10">发送命令</string>
    <string name="send_data11">发送命令</string>
    <string name="input_data">二维码扫描</string>
    <string name="load_cmd_list">加载命令列表</string>

    <string name="login_welcome">欢迎使用智能存款机</string>
    <string name="login_input_user">请输入用户名</string>
    <string name="login_input_pwd">请输入密码</string>
    <string name="login_money">零钱</string>
    <string name="login_currency">币种</string>
    <string name="login_menu">菜单</string>
    <string name="login_login">登  录</string>
    <string name="login_complete">完成</string>

    <string name="setma_select">请选择您需要的服务</string>
    <string name="home_title">首选项</string>

    <string name="deposit_select">请选择存款方式</string>
    <string name="deposit_other_select">请选择其他的存款方式</string>
    <string name="back">返回</string>
    <string name="test">测试</string>
    <string name="logout">注销</string>
    <string name="exit">退出</string>
    <string name="clear_deveic_test">清机测试</string>
    <string name="original_bill_num">原钞袋数:</string>
    <string name="new_bill_num">新钞袋数:</string>
    <string name="lead_seal_num">封 铅 号:</string>
    <string name="manaage">管理</string>
    <string name="user_manaage">用户管理</string>
    <string name="device_manaage">机器管理</string>
    <string name="data_upload">数据上传</string>
    <string name="network_test">网络测试</string>
    <string name="network_test_input">请输入测试地址(IP或域名)</string>
    <string name="deposit_data">存款数据</string>
    <string name="bill_data">钞贷数据</string>
    <string name="upload">上传</string>
    <string name="setting">设定</string>
    <string name="set">设置</string>
    <string name="set_device">机器设定</string>
    <string name="set_network">网络设定</string>
    <string name="set_function">功能设定</string>
    <string name="set_envelope">信封金额</string>
    <string name="maintain_title">维护</string>
    <string name="maint_sysinfo">系统信息</string>
    <string name="maint_set">机器设置</string>
    <string name="maint_debug">调试</string>
    <string name="maint_control">设备控制</string>
    <string name="maint_error_clear">错误清除</string>
    <string name="maint_bill_init">钞袋初始化</string>
    <string name="print_sys_title">系统打印</string>
    <string name="print_all">统计打印</string>
    <string name="print_bill_d">当前钞袋</string>
    <string name="print_clear_record">清机记录</string>
    <string name="print_deposit_record">存款记录</string>
    <string name="version_update">版本更新</string>
    <string name="update_set">更新设置</string>
    <string name="auto_update">自动更新</string>
    <string name="update_android">安卓更新</string>
    <string name="register">注册</string>
    <string name="device_register">设备注册</string>
    <string name="input_register_code">请输入注册码</string>
    <string name="system_time">系统时间</string>
    <string name="language_select">语言选择</string>
    <string name="plase_paper_put">请把纸币放入存款口</string>
    <string name="currency_numer">张数 :</string>
    <string name="monery_number">金额 :</string>
    <string name="refuse_money">拒钞 :</string>
    <string name="coin">硬币</string>
    <string name="check">支票</string>
    <string name="bill">钞票</string>
    <string name="other">其他</string>
    <string name="input_money">请输入存款金额</string>
    <string name="record_deposittime">存款时间</string>
    <string name="record_depositpeople">存款人</string>
    <string name="record_money">金额</string>
    <string name="record_account">银行账户</string>
    <string name="record_code">存款编码</string>
    <string name="record_remark">备注</string>
    <string name="record_allprint">汇总打印</string>
    <string name="record_updaloddata">上传数据</string>
    <string name="deposit_manage">存款管理</string>
    <string name="current_deposit">当前存款</string>
    <string name="ping">Ping</string>
    <string name="deposit_details">存入明细</string>
    <string name="miane">面额</string>
    <string name="zhangshu">张数</string>
    <string name="total">小计</string>
    <string name="current_total">当前总计</string>
    <string name="already_total">已存累计</string>
    <string name="refuse_total">拒钞金额</string>
    <string name="over_deposit">结束存款</string>
    <string name="continue_deposit">继续存钱</string>
    <string name="is_continiu_deposit">您有一笔钞票未存入，\n是否继续存入？</string>
    <string name="is_over_deposit">是否结束存款？</string>
    <string name="user_number">序号</string>
    <string name="user_account">账号</string>
    <string name="user_roles">角色</string>
    <string name="clear_sync">清除同步</string>
    <string name="sync_account">同步账号</string>
    <string name="cashregister">收款机</string>
    <string name="dynamic_pwd">动态密码锁</string>
    <string name="serial_set">串口设置</string>
    <string name="serial_setting">串口设定</string>
    <string name="cashregister_setting">收款机设置</string>
    <string name="server_setting">服务器设定</string>
    <string name="server_set">服务器设置</string>
    <string name="dynamic_pwd_setting">动态密码锁设置</string>
    <string name="print_serial">打印机串口</string>
    <string name="clear_serial">清分机串口</string>
    <string name="saoyisao_serial">扫码机串口</string>
    <string name="input_service_url">请输入服务器地址</string>
    <string name="functiongsetting">功能设定</string>
    <string name="savecapa">暂存口容量</string>
    <string name="exitmoneycapa">退钞口容量</string>
    <string name="updatepwd">修改密码</string>
    <string name="autologout">自动注销</string>
    <string name="turnoff">蜂鸣器开关</string>
    <string name="isdisplaybtn">是否显示注销按钮</string>
    <string name="envelope_max_set">信封最大金额设定</string>
    <string name="curentmax">目前最大金额</string>
    <string name="inputmaxmoney">输入最大金额</string>
    <string name="systeminfo">系统信息</string>
    <string name="bankset">钞袋设置</string>
    <string name="systemclear">系统清理</string>
    <string name="systemdubug">系统调试</string>
    <string name="device_control">设备控制</string>
    <string name="printdevice_debug">打印机调试</string>
    <string name="print">打印</string>
    <string name="scanner_debug">扫描器调试</string>
    <string name="mandatorymode">强制模式</string>
    <string name="deposit_error">存款异常处理</string>
    <string name="fault_clear">故障清除</string>
    <string name="device_check">设备自检</string>
    <string name="serial_num">系列号</string>
    <string name="device_num">设备型号</string>
    <string name="software_num">软件版本号</string>
    <string name="zhubannum">主板版本号</string>
    <string name="imagenum">图像版本号</string>
    <string name="softwareupdate">软件更新</string>
    <string name="gujianupdate">固件更新</string>
    <string name="imagebanupdate">图像板更新</string>
    <string name="yujingrongliang">预警容量</string>
    <string name="suggest0">建议输入0-80</string>
    <string name="senser_status">传感器状态</string>
    <string name="valvejiaodui">阀值校对</string>
    <string name="senser_name">传感器名称</string>
    <string name="senser">传感器</string>
    <string name="loacation">位置</string>
    <string name="factoryvalve">出厂阀值</string>
    <string name="newvalvenum">新阀值</string>
    <string name="current_valtage">当前电压</string>
    <string name="opertion">操作</string>
    <string name="refersh">刷新</string>
    <string name="calibration">校准</string>
    <string name="update">修改</string>
    <string name="start">启用</string>
    <string name="clearing_record">清机记录</string>
    <string name="flightno">班次号</string>
    <string name="billnumber">钞袋号</string>
    <string name="oldbillnumer">旧钞袋号</string>
    <string name="fengqianhao">封铅号</string>
    <string name="exchange_people">更换人</string>
    <string name="exchange_time">更换时间</string>
    <string name="exchange_status">更换状态</string>
    <string name="deal_record">交易记录</string>
    <string name="starttime">起始时间</string>
    <string name="endtime">结束时间</string>
    <string name="account">账号</string>
    <string name="branches">网点</string>
    <string name="name">姓名</string>
    <string name="classify">分类</string>
    <string name="date">日期</string>
    <string name="status">状态</string>
    <string name="details">详细</string>
    <string name="download">下载</string>

</resources>
