<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/setma_select"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ibtn_manager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/setmanage1"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/manaage"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/ibtn_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:drawableTop="@mipmap/setmanage2"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/ibtn_maintain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:drawableTop="@mipmap/setmanage3"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/maintain_title"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/ibtn_print"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:drawableTop="@mipmap/setmanage4"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/print_all"
            android:textColor="@color/white"
            android:textSize="14sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ibtn_device_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/setmanage5"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/device_register"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/ibtn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:drawableTop="@mipmap/setmanage6"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/version_update"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/ibtn_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:drawableTop="@mipmap/setmanage7"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/ibtn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:drawableTop="@mipmap/setmanage8"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:textSize="14sp" />


    </LinearLayout>

</LinearLayout>
