<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/setting"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tvDevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/ic_launcher_round"
            android:drawablePadding="10dp"
            android:text="@string/set_device"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:drawableTop="@mipmap/ic_launcher_round"
            android:drawablePadding="10dp"
            android:text="@string/set_network"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvFunction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:drawableTop="@mipmap/ic_launcher_round"
            android:drawablePadding="10dp"
            android:text="@string/set_function"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvenvelope"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:drawableTop="@mipmap/ic_launcher_round"
            android:drawablePadding="10dp"
            android:text="@string/set_envelope"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginLeft="80dp"
        android:layout_marginBottom="30dp"
        android:background="#18f"
        android:text="@string/back"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btLogout"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="30dp"
        android:background="#18f"
        android:text="@string/logout"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</android.support.constraint.ConstraintLayout>
