<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/maintain_title"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <LinearLayout
        android:id="@+id/ll11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tvSysinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/ic_launcher_round"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/maint_sysinfo"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvDeviceSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:drawableTop="@mipmap/ic_launcher_round"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/maint_set"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvDebug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:drawableTop="@mipmap/ic_launcher_round"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/maint_debug"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:ignore="MissingConstraints" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/ll11"
        app:layout_constraintStart_toStartOf="@+id/ll11"
        app:layout_constraintTop_toBottomOf="@+id/ll11"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tvControl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/ic_launcher_round"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/maint_control"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvErrorClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:drawableTop="@mipmap/ic_launcher_round"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/maint_error_clear"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvbillinit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:drawableTop="@mipmap/ic_launcher_round"
            android:drawablePadding="10dp"
            android:text="@string/maint_bill_init"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:ignore="MissingConstraints" />


    </LinearLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginLeft="80dp"
        android:layout_marginBottom="30dp"
        android:background="#18f"
        android:text="@string/back"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btLogout"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="30dp"
        android:background="#18f"
        android:text="@string/logout"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</android.support.constraint.ConstraintLayout>
